--- a/vol1.html
+++ b/vol1.html
@@ -6,88 +6,76 @@
 <title>PaleZine – Volume 1</title>
 
 <style>
-  * { box-sizing: border-box; }
   body {
     margin: 0;
     background: radial-gradient(circle at 20% 20%, #2a2a2a 0%, #000 80%);
-    font-family: system-ui, -apple-system, "Inter", sans-serif;
+    font-family: system-ui, sans-serif;
     color: #fff;
     min-height: 100vh;
-
     display: flex;
     flex-direction: column;
     align-items: center;
 
-    cursor: url("camel_cursor.ong") 16 16, auto; /* GLOBAL CAMEL CURSOR */
+    cursor: url("camel_cursor.ong") 4 4, auto;
   }
 
   header {
-    position: sticky; top: 0; z-index: 5;
-    width: 100%; padding: .75rem 1rem;
+    position: sticky; top: 0;
+    width: 100%;
+    padding: .75rem;
     background: rgba(0,0,0,0.6);
-    backdrop-filter: blur(6px);
-    border-bottom: 1px solid rgba(255,255,255,0.06);
-    display: flex; gap: .75rem; justify-content: center;
+    border-bottom: 1px solid rgba(255,255,255,0.1);
+    display: flex; justify-content: center; gap: 1rem;
   }
 
   .btn {
-    border: 1px solid rgba(255,255,255,0.15);
-    background: rgba(255,255,255,0.06);
-    color: #e9f3ff;
+    border: 1px solid rgba(255,255,255,0.2);
     padding: .45rem .7rem;
     border-radius: 8px;
-    font-size: .85rem;
-    cursor: inherit;
+    background: rgba(255,255,255,0.08);
+    color: white;
     text-decoration: none;
+    cursor: inherit;
   }
 
-  .wrap { width: 100%; max-width: 900px; padding: 1rem; }
+  .wrap { max-width: 900px; width: 100%; padding: 1rem; }
 
   #scrollReader img {
-    width: 100%; height: auto; display: block;
-    background: #111; margin-bottom: .75rem;
+    width: 100%;
+    margin: 0 0 .75rem 0;
     border-radius: 10px;
+    background: #111;
     box-shadow: 0 20px 60px rgba(0,0,0,0.5);
   }
 
-  /* FLIPBOOK */
   #flipbook {
-    width: 900px; height: 600px;
-    background: #1a1a1a;
+    width: 900px;
+    height: 600px;
+    background: #111;
     border-radius: 12px;
     overflow: hidden;
     display: none;
-    margin: 0 auto;
     position: relative;
+    margin: auto;
   }
 
-  #flipbook .page {
-    width: 450px; height: 600px;
+  .page {
+    width: 450px;
+    height: 600px;
     background-size: cover;
     background-position: center;
     position: relative;
   }
 
-  /* ⭐ CLEAN DOG-EAR OVERLAY */
-  #flipbook .page:first-child::after {
-    content: "";
+  /* ⭐ DOG EAR — only page 1, only before flip */
+  .page:first-child .dogear {
     position: absolute;
     top: 0; right: 0;
     width: 0; height: 0;
-    border-top: 70px solid rgba(255,255,255,0.8);
+    border-top: 70px solid rgba(255,255,255,0.85);
     border-left: 70px solid transparent;
-    box-shadow: -5px 5px 15px rgba(0,0,0,0.4);
-    z-index: 20;
-  }
-
-  footer {
-    text-align:center; color:#ccc;
-    padding:2rem 1rem; font-size:.85rem;
-  }
-
-  @media (max-width:950px){
-    #flipbook{width:100%; height:calc(100vw*(600/900));}
-    #flipbook .page{width:50%; height:100%;}
+    box-shadow: -3px 3px 10px rgba(0,0,0,0.5);
+    z-index: 50;
   }
 
 </style>
@@ -99,10 +87,10 @@
 <body>
 
 <header>
-  <span class="title">PaleZine — Volume 1</span>
+  <span>PaleZine — Volume 1</span>
   <button id="toggleMode" class="btn">Switch to Flip</button>
-  <a href="booklet.pdf" class="btn" download>Download PDF</a>
-  <a href="index.html" class="btn">Back to Volumes</a>
+  <a href="booklet.pdf" class="btn">Download PDF</a>
+  <a href="index.html" class="btn">Back</a>
 </header>
 
 <div class="wrap">
@@ -110,89 +98,99 @@
   <div id="flipbook"></div>
 </div>
 
-<footer>
-  If all is black, wait for loading 😉<br><br>
-</footer>
-
 <script>
-const FOLDER="pages/";
-const PREFIX="booklet-page-";
-const PAD=3;
-const EXT=".jpg";
-const MAX=200;
+const folder = "pages/";
+const prefix = "booklet-page-";
+const ext = ".jpg";
+const pad = 3;
+const maxPages = 200;
 
-let pages=[], mode="scroll";
+let pages = [];
+let mode = "scroll";
 
-function pad(n){ return String(n).padStart(PAD,"0"); }
-
-function exists(url){
-  return new Promise(r=>{
-    const i=new Image();
-    i.onload=()=>r(true); i.onerror=()=>r(false); i.src=url;
-  });
-}
+function padNum(n){ return String(n).padStart(pad,"0"); }
 
 async function discover(){
-  const out=[];
-  for(let i=1;i<MAX;i++){
-    const url=`${FOLDER}${PREFIX}${pad(i)}${EXT}`;
-    if(await exists(url)) out.push(url);
-    else break;
+  const arr=[];
+  for(let i=1;i<maxPages;i++){
+    const url=`${folder}${prefix}${padNum(i)}${ext}`;
+    const img=new Image();
+    img.src=url;
+    const ok = await new Promise(res=>{img.onload=()=>res(true); img.onerror=()=>res(false);});
+    if(!ok) break;
+    arr.push(url);
   }
-  return out;
+  return arr;
 }
 
-function scrollMode(){
-  document.getElementById("flipbook").style.display="none";
+function showScroll(){
   const s=document.getElementById("scrollReader");
-  s.innerHTML="";
-  s.style.display="block";
+  const f=document.getElementById("flipbook");
 
-  pages.forEach(u=>{
-    const img=document.createElement("img");
-    img.src=u;
-    s.appendChild(img);
+  s.innerHTML="";
+  pages.forEach(src=>{
+    const im=document.createElement("img");
+    im.src=src;
+    s.appendChild(im);
   });
 
+  s.style.display="block";
+  f.style.display="none";
   mode="scroll";
-  document.getElementById("toggleMode").textContent="Switch to Flip";
+  toggleMode.textContent="Switch to Flip";
 }
 
-function flipMode(){
+function showFlip(){
   const s=document.getElementById("scrollReader");
   const f=document.getElementById("flipbook");
 
   s.style.display="none";
   f.innerHTML="";
 
-  pages.forEach(u=>{
+  pages.forEach((src,i)=>{
     const p=document.createElement("div");
     p.className="page";
-    p.style.backgroundImage=`url('${u}')`;
+    p.style.backgroundImage=`url(${src})`;
+
+    if(i===0){
+      const dog=document.createElement("div");
+      dog.className="dogear";
+      p.appendChild(dog);
+    }
+
     f.appendChild(p);
   });
 
   f.style.display="block";
 
-  const fb=$("#flipbook");
+  const fb = $("#flipbook");
   try{ if(fb.data("init")) fb.turn("destroy"); }catch(e){}
 
   fb.turn({
-    width:900, height:600, autoCenter:true,
-    display:window.matchMedia('(max-width:950px)').matches?"single":"double"
-  }).data("init",true);
+    width:900,
+    height:600,
+    autoCenter:true,
+    display: window.innerWidth<950 ? "single" : "double",
+    when: {
+      turning: function(){
+        document.querySelector(".dogear")?.remove();
+      }
+    }
+  });
 
+  fb.data("init",true);
   mode="flip";
-  document.getElementById("toggleMode").textContent="Switch to Scroll";
+  toggleMode.textContent="Switch to Scroll";
 }
 
-document.getElementById("toggleMode").addEventListener("click",()=>{
-  if(mode==="scroll") flipMode(); else scrollMode();
+toggleMode.addEventListener("click",()=>{
+  if(mode==="scroll") showFlip();
+  else showScroll();
 });
 
 (async function(){
-  pages=await discover();
-  scrollMode();
+  pages = await discover();
+  showScroll();
 })();
 </script>
 
