--- a/vol2.html
+++ b/vol2.html
@@ -6,94 +6,83 @@
 <title>PaleZine – Volume 2</title>
 
 <style>
-  * { box-sizing: border-box; }
   body {
     margin:0;
     background: radial-gradient(circle at 20% 20%, #2a2a2a 0%, #000 80%);
-    font-family: system-ui, -apple-system, "Inter", sans-serif;
+    font-family: system-ui, sans-serif;
     color:#fff;
     min-height:100vh;
     display:flex; flex-direction:column; align-items:center;
-    cursor:url("camel_cursor.ong") 16 16, auto;
+
+    cursor: url("camel_cursor.ong") 4 4, auto;
   }
 
   header {
-    position:sticky; top:0; z-index:5;
-    width:100%; padding:.75rem 1rem;
+    position:sticky; top:0;
+    width:100%; padding:.75rem;
     background:rgba(0,0,0,0.6);
-    border-bottom:1px solid rgba(255,255,255,0.06);
-    display:flex; gap:.75rem; justify-content:center;
+    border-bottom:1px solid rgba(255,255,255,0.15);
+    display:flex; justify-content:center; gap:1rem;
   }
 
   .btn {
-    border:1px solid rgba(255,255,255,0.15);
-    background:rgba(255,255,255,0.06);
-    color:#e9f3ff;
+    border:1px solid rgba(255,255,255,0.2);
+    background:rgba(255,255,255,0.08);
     padding:.45rem .7rem;
     border-radius:8px;
-    cursor:inherit;
-    font-size:.85rem;
     text-decoration:none;
+    color:white;
+    cursor:inherit;
   }
 
-  .wrap { width:100%; max-width:900px; padding:1rem; }
+  .wrap { max-width:900px; width:100%; padding:1rem; }
 
   #scrollReader img {
     width:100%; border-radius:10px;
     margin-bottom:.75rem;
+    background:#111;
     box-shadow:0 20px 60px rgba(0,0,0,0.5);
   }
 
-  /* Flipbook */
   #flipbook {
     width:900px; height:600px;
-    background:#1a1a1a;
+    background:#111;
     border-radius:12px;
     overflow:hidden;
+    margin:auto;
     display:none;
-    margin:0 auto;
   }
 
-  #flipbook .page {
+  .page {
     width:450px; height:600px;
     background-size:cover;
     background-position:center;
     position:relative;
   }
 
-  /* ⭐ SAME DOG-EAR CORNER */
-  #flipbook .page:first-child::after {
-    content:"";
+  /* ⭐ DOG EAR ONLY ON FIRST PAGE */
+  .page:first-child .dogear {
     position:absolute;
     top:0; right:0;
     width:0; height:0;
-    border-top:70px solid rgba(255,255,255,0.8);
+    border-top:70px solid rgba(255,255,255,0.85);
     border-left:70px solid transparent;
-    box-shadow:-5px 5px 15px rgba(0,0,0,0.4);
-    z-index:20;
+    box-shadow:-3px 3px 10px rgba(0,0,0,0.4);
+    z-index:50;
   }
 
-  footer {
-    text-align:center; color:#ccc;
-    padding:2rem 1rem; font-size:.85rem;
-  }
-
-  @media(max-width:950px){
-    #flipbook{width:100%; height:calc(100vw*(600/900));}
-    #flipbook .page{width:50%; height:100%;}
-  }
 </style>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/blasten/turn.js/turn.min.js"></script>
-</head>
 
+</head>
 <body>
 
 <header>
-  <span class="title">PaleZine — Volume 2</span>
+  <span>PaleZine — Volume 2</span>
   <button id="toggleMode" class="btn">Switch to Flip</button>
-  <a href="booklet2.pdf" class="btn" download>Download PDF</a>
+  <a href="booklet2.pdf" class="btn">Download</a>
   <a href="index.html" class="btn">Back</a>
 </header>
 
@@ -102,15 +91,11 @@
   <div id="flipbook"></div>
 </div>
 
-<footer>
-  If all is black, wait a moment 😉
-</footer>
-
 <script>
-const FOLDER="pages2/";
-const PREFIX="booklet2-";
-const SUFFIX="-1.jpg";
-const MAX=300;
+const folder="pages2/";
+const prefix="booklet2-";
+const suffix="-1.jpg";
+const max=300;
 
 let pages=[];
 let mode="scroll";
@@ -126,73 +111,87 @@ function exists(url){
 
 async function discover(){
   const arr=[];
-  for(let i=1;i<MAX;i++){
-    const u=`${FOLDER}${PREFIX}${i}${SUFFIX}`;
+  for(let i=1;i<max;i++){
+    const u=`${folder}${prefix}${i}${suffix}`;
     if(await exists(u)) arr.push(u);
     else break;
   }
   return arr;
 }
 
-function scrollMode(){
+function showScroll(){
   const s=document.getElementById("scrollReader");
   const f=document.getElementById("flipbook");
-  s.innerHTML=""; s.style.display="block"; f.style.display="none";
 
-  pages.forEach(u=>{
-    const img=document.createElement("img");
-    img.src=u;
-    s.appendChild(img);
+  s.innerHTML="";
+  pages.forEach(src=>{
+    const i=document.createElement("img");
+    i.src=src;
+    s.appendChild(i);
   });
 
+  s.style.display="block";
+  f.style.display="none";
   mode="scroll";
-  document.getElementById("toggleMode").textContent="Switch to Flip";
+  toggleMode.textContent="Switch to Flip";
 }
 
-function flipMode(){
+function showFlip(){
   const s=document.getElementById("scrollReader");
   const f=document.getElementById("flipbook");
-  s.style.display="none"; f.innerHTML="";
 
-  pages.forEach(u=>{
+  s.style.display="none";
+  f.innerHTML="";
+
+  pages.forEach((src,i)=>{
     const p=document.createElement("div");
     p.className="page";
-    p.style.backgroundImage=`url('${u}')`;
+    p.style.backgroundImage=`url(${src})`;
+
+    if(i===0){
+      const dog=document.createElement("div");
+      dog.className="dogear";
+      p.appendChild(dog);
+    }
+
     f.appendChild(p);
   });
 
   f.style.display="block";
 
   const fb=$("#flipbook");
+
   try{ if(fb.data("init")) fb.turn("destroy"); }catch(e){}
 
   fb.turn({
-    width:900, height:600, autoCenter:true,
-    display:window.matchMedia('(max-width:950px)').matches?"single":"double"
-  }).data("init",true);
+    width:900,
+    height:600,
+    autoCenter:true,
+    display: window.innerWidth<950 ? "single" : "double",
+    when: {
+      turning: function(){
+        document.querySelector(".dogear")?.remove();
+      }
+    }
+  });
+
+  fb.data("init",true);
 
   mode="flip";
-  document.getElementById("toggleMode").textContent="Switch to Scroll";
+  toggleMode.textContent="Switch to Scroll";
 }
 
-document.getElementById("toggleMode").addEventListener("click",()=>{
-  if(mode==="scroll") flipMode(); else scrollMode();
+toggleMode.addEventListener("click",()=>{
+  if(mode==="scroll") showFlip();
+  else showScroll();
 });
 
 (async function(){
   pages=await discover();
-  scrollMode();
+  showScroll();
 })();
 </script>
 
 </body>
 </html>
-
-
-
-
-
-
-
-
 
