--- a/vol2.html
+++ b/vol2.html
@@ -26,20 +26,21 @@
   }
 
   .btn {
-    border:1px solid rgba(255,255,255,0.2);
-    background:rgba(255,255,255,0.08);
     padding:.45rem .7rem;
     border-radius:8px;
-    text-decoration:none;
+    background:rgba(255,255,255,0.1);
     color:white;
+    text-decoration:none;
+    border:1px solid rgba(255,255,255,0.15);
     cursor:inherit;
   }
 
   .wrap { max-width:900px; width:100%; padding:1rem; }
 
   #scrollReader img {
-    width:100%; border-radius:10px;
+    width:100%;
     margin-bottom:.75rem;
+    border-radius:10px;
     background:#111;
     box-shadow:0 20px 60px rgba(0,0,0,0.5);
   }
@@ -51,26 +52,31 @@
     overflow:hidden;
     margin:auto;
     display:none;
+    position:relative;
   }
 
   .page {
     width:450px; height:600px;
     background-size:cover;
     background-position:center;
-    position:relative;
   }
 
-  /* ⭐ DOG EAR ONLY ON FIRST PAGE */
-  .page:first-child .dogear {
+  /* Floating arrow */
+  #flipArrow {
     position:absolute;
-    top:0; right:0;
-    width:0; height:0;
-    border-top:70px solid rgba(255,255,255,0.85);
-    border-left:70px solid transparent;
-    box-shadow:-3px 3px 10px rgba(0,0,0,0.4);
-    z-index:50;
+    top:8px;
+    right:8px;
+    font-size:16px;
+    opacity:0.7;
+    pointer-events:none;
+    z-index:9999;
+    display:none;
   }
 
+  @media(max-width:950px){
+    #flipbook { width:100%; height:calc(100vw*(600/900)); }
+    .page{ width:50%; height:100%; }
+  }
 </style>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -82,11 +88,12 @@
 <header>
   <span>PaleZine — Volume 2</span>
   <button id="toggleMode" class="btn">Switch to Flip</button>
-  <a href="booklet2.pdf" class="btn">Download</a>
+  <a href="booklet2.pdf" class="btn" download>Download</a>
   <a href="index.html" class="btn">Back</a>
 </header>
 
 <div class="wrap">
+  <div id="flipArrow">↱</div>
   <div id="scrollReader"></div>
   <div id="flipbook"></div>
 </div>
@@ -120,6 +127,7 @@ async function discover(){
 }
 
 function showScroll(){
+  document.getElementById("flipArrow").style.display="none";
   const s=document.getElementById("scrollReader");
   const f=document.getElementById("flipbook");
 
@@ -132,6 +140,7 @@ function showScroll(){
 
   s.style.display="block";
   f.style.display="none";
+
   mode="scroll";
   toggleMode.textContent="Switch to Flip";
 }
@@ -143,24 +152,16 @@ function showFlip(){
   s.style.display="none";
   f.innerHTML="";
 
-  pages.forEach((src,i)=>{
+  pages.forEach(src=>{
     const p=document.createElement("div");
     p.className="page";
     p.style.backgroundImage=`url(${src})`;
-
-    if(i===0){
-      const dog=document.createElement("div");
-      dog.className="dogear";
-      p.appendChild(dog);
-    }
-
     f.appendChild(p);
   });
 
   f.style.display="block";
 
   const fb=$("#flipbook");
-
   try{ if(fb.data("init")) fb.turn("destroy"); }catch(e){}
 
   fb.turn({
@@ -168,14 +169,17 @@ function showFlip(){
     height:600,
     autoCenter:true,
     display: window.innerWidth<950 ? "single" : "double",
-    when: {
-      turning: function(){
-        document.querySelector(".dogear")?.remove();
+    when:{
+      turning:function(){
+        document.getElementById("flipArrow").style.display="none";
       }
     }
   });
 
   fb.data("init",true);
+
+  /* Show arrow only on first page */
+  document.getElementById("flipArrow").style.display="block";
 
   mode="flip";
   toggleMode.textContent="Switch to Scroll";
