--- a/vol1.html
+++ b/vol1.html
@@ -3,200 +3,257 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>PaleZine – Volume 1</title>
+<title>PaleZine - Volume 1</title>
 
 <style>
+  * { box-sizing: border-box; }
   body {
     margin: 0;
     background: radial-gradient(circle at 20% 20%, #2a2a2a 0%, #000 80%);
-    font-family: system-ui, sans-serif;
+    font-family: system-ui, -apple-system, "Inter", sans-serif;
     color: #fff;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-
-    cursor: url("camel_cursor.ong") 4 4, auto;
   }
 
   header {
-    position: sticky; top: 0;
+    position: sticky; top: 0; z-index: 10;
     width: 100%;
-    padding: .75rem;
     background: rgba(0,0,0,0.6);
-    border-bottom: 1px solid rgba(255,255,255,0.1);
-    display: flex; justify-content: center; gap: 1rem;
+    backdrop-filter: blur(6px);
+    border-bottom: 1px solid rgba(255,255,255,0.06);
+    padding: .75rem 1rem;
+    display: flex; gap: .75rem; justify-content: center; flex-wrap: wrap;
   }
+
+  .title { font-weight: 600; }
 
   .btn {
+    border: 1px solid rgba(255,255,255,0.15);
+    background: rgba(255,255,255,0.06);
+    color: #e9f3ff;
     padding: .45rem .7rem;
     border-radius: 8px;
-    background: rgba(255,255,255,0.1);
-    border: 1px solid rgba(255,255,255,0.15);
-    color: white;
+    font-size: .85rem;
+    cursor: pointer;
     text-decoration: none;
-    cursor: inherit;
+  }
+  .btn:hover { background: rgba(255,255,255,0.1); }
+
+  .wrap {
+    width: 100%;
+    max-width: 900px;
+    padding: 1rem;
+    position: relative;
   }
 
-  .wrap { max-width: 900px; width: 100%; padding: 1rem; }
-
+  /* Scroll mode */
+  #scrollReader {
+    width: 100%;
+    max-width: 900px;
+    display: none;
+  }
   #scrollReader img {
     width: 100%;
+    height: auto;
+    display: block;
+    background: #111;
     margin-bottom: .75rem;
     border-radius: 10px;
-    background: #111;
     box-shadow: 0 20px 60px rgba(0,0,0,0.5);
   }
 
+  /* Flipbook container */
   #flipbook {
     width: 900px;
     height: 600px;
-    background: #111;
+    background: #1a1a1a;
     border-radius: 12px;
+    box-shadow: 0 40px 120px rgba(0,0,0,0.9);
     overflow: hidden;
     display: none;
-    position: relative;
-    margin: auto;
+    margin: 0 auto;
   }
-
-  .page {
+  #flipbook .page {
     width: 450px;
     height: 600px;
     background-size: cover;
     background-position: center;
-    position: relative;
   }
 
-  /* ⭐ Small floating arrow indicator */
-  #flipArrow {
+  /* Flip hint (Option 1) */
+  #flipHint {
     position: absolute;
-    top: 8px;
-    right: 8px;
-    font-size: 16px;
-    opacity: 0.7;
+    bottom: 12px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 4px 12px;
+    background: rgba(0,0,0,0.45);
+    border-radius: 6px;
+    font-size: 0.85rem;
+    color: #fff;
     pointer-events: none;
-    z-index: 9999;
-    display: none;
+    opacity: 0;
+    transition: opacity .6s ease;
+    z-index: 20;
   }
 
-  @media (max-width:950px){
-    #flipbook { width:100%; height:calc(100vw*(600/900)); }
-    .page { width:50%; height:100%; }
+  footer {
+    text-align: center;
+    color: #ccc;
+    padding: 2rem 1rem;
+    font-size: .85rem;
+  }
+
+  @media (max-width: 950px) {
+    #flipbook {
+      width: 100%;
+      height: calc(100vw * (600/900));
+    }
+    #flipbook .page {
+      width: 50%;
+      height: 100%;
+    }
   }
 </style>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/blasten/turn.js/turn.min.js"></script>
-
 </head>
+
 <body>
 
 <header>
-  <span>PaleZine — Volume 1</span>
+  <span class="title">PaleZine — Volume 1</span>
   <button id="toggleMode" class="btn">Switch to Flip</button>
   <a href="booklet.pdf" class="btn" download>Download PDF</a>
-  <a href="index.html" class="btn">Back</a>
+  <a href="index.html" class="btn">Back to Volumes</a>
 </header>
 
 <div class="wrap">
-  <div id="flipArrow">↱</div>
   <div id="scrollReader"></div>
   <div id="flipbook"></div>
+
+  <!-- FLIP HINT -->
+  <div id="flipHint">Swipe or drag to flip →</div>
 </div>
 
+<footer>
+  If all is black, wait for loading 😉<br><br>
+  Tip: scroll mode is easiest on mobile.
+</footer>
+
 <script>
-const folder="pages/";
-const prefix="booklet-page-";
-const ext=".jpg";
-const pad=3;
-const max=200;
+const FOLDER = "pages/";
+const PREFIX = "booklet-page-";
+const PAD = 3;
+const EXT = ".jpg";
+const MAX_PAGES = 200;
 
-let pages=[];
-let mode="scroll";
+let pageURLs = [];
+let mode = "scroll";
 
-function padNum(n){ return String(n).padStart(pad,"0"); }
+function pad(n){ return String(n).padStart(PAD, "0"); }
 
-async function discover(){
-  const arr=[];
-  for(let i=1;i<max;i++){
-    const url=`${folder}${prefix}${padNum(i)}${ext}`;
-    const img=new Image();
-    img.src=url;
-    const ok = await new Promise(res=>{img.onload=()=>res(true); img.onerror=()=>res(false);});
-    if(!ok) break;
-    arr.push(url);
+function imgExists(url){
+  return new Promise(resolve => {
+    const img = new Image();
+    img.onload = ()=>resolve(true);
+    img.onerror = ()=>resolve(false);
+    img.src = url;
+  });
+}
+
+async function discoverPages(){
+  const urls = [];
+  for(let i=1; i<MAX_PAGES; i++){
+    const url = `${FOLDER}${PREFIX}${pad(i)}${EXT}`;
+    if(await imgExists(url)) urls.push(url);
+    else break;
   }
-  return arr;
+  return urls;
 }
 
-function showScroll(){
-  document.getElementById("flipArrow").style.display="none";
-  const s=document.getElementById("scrollReader");
-  const f=document.getElementById("flipbook");
-
-  s.innerHTML="";
-  pages.forEach(src=>{
-    const im=document.createElement("img");
-    im.src=src;
-    s.appendChild(im);
-  });
-
-  s.style.display="block";
-  f.style.display="none";
-  mode="scroll";
-  toggleMode.textContent="Switch to Flip";
+function showHint(show){
+  const hint = document.getElementById("flipHint");
+  hint.style.opacity = show ? 1 : 0;
 }
 
-function showFlip(){
-  const s=document.getElementById("scrollReader");
-  const f=document.getElementById("flipbook");
+function mountScroll(){
+  const scroll = document.getElementById("scrollReader");
+  const flip = document.getElementById("flipbook");
 
-  s.style.display="none";
-  f.innerHTML="";
-
-  pages.forEach(src=>{
-    const p=document.createElement("div");
-    p.className="page";
-    p.style.backgroundImage=`url(${src})`;
-    f.appendChild(p);
+  scroll.innerHTML = "";
+  pageURLs.forEach(src=>{
+    const img = document.createElement("img");
+    img.src = src;
+    scroll.appendChild(img);
   });
 
-  f.style.display="block";
+  scroll.style.display = "block";
+  flip.style.display = "none";
+  showHint(false);
 
-  const fb=$("#flipbook");
-  try{ if(fb.data("init")) fb.turn("destroy"); }catch(e){}
+  mode = "scroll";
+  document.getElementById("toggleMode").textContent = "Switch to Flip";
+}
 
-  fb.turn({
-    width:900,
-    height:600,
-    autoCenter:true,
-    display: window.innerWidth < 950 ? "single" : "double",
+function mountFlip(){
+  const scroll = document.getElementById("scrollReader");
+  const flip = document.getElementById("flipbook");
+
+  scroll.style.display = "none";
+  flip.innerHTML = "";
+
+  pageURLs.forEach(src=>{
+    const d = document.createElement("div");
+    d.className = "page";
+    d.style.backgroundImage = `url('${src}')`;
+    flip.appendChild(d);
+  });
+
+  flip.style.display = "block";
+
+  // Reinit turn.js
+  const $f = $("#flipbook");
+  try { if ($f.data("initialized")) $f.turn("destroy"); } catch(e){}
+
+  $("#flipbook").turn({
+    width: 900,
+    height: 600,
+    autoCenter: true,
+    display: window.matchMedia('(max-width:950px)').matches ? "single" : "double",
     when: {
-      turning: function(){
-        document.getElementById("flipArrow").style.display="none";
+      turned: function(e, page){
+        showHint(page === 1);
       }
     }
-  });
+  }).data("initialized", true);
 
-  fb.data("init",true);
+  // Show hint on first load
+  showHint(true);
 
-  /* Show arrow indicator only on page 1 */
-  document.getElementById("flipArrow").style.display="block";
-
-  mode="flip";
-  toggleMode.textContent="Switch to Scroll";
+  mode = "flip";
+  document.getElementById("toggleMode").textContent = "Switch to Scroll";
 }
 
-toggleMode.addEventListener("click",()=>{
-  if(mode==="scroll") showFlip();
-  else showScroll();
+document.getElementById("toggleMode").addEventListener("click", ()=>{
+  if (mode === "scroll") mountFlip();
+  else mountScroll();
 });
 
-(async function(){
-  pages = await discover();
-  showScroll();
+(async function init(){
+  pageURLs = await discoverPages();
+  if (pageURLs.length === 0){
+    document.querySelector(".wrap").innerHTML = "<div style='color:#ccc'>No pages found.</div>";
+    return;
+  }
+  mountScroll(); // default
 })();
 </script>
 
 </body>
 </html>
+
